--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/GAGdelSolar/CFS2022II#readme",
   "dependencies": {
-    "@types/node": "^18.7.23"
+    "@types/node": "^18.7.23",
+    "readline-sync": "^1.4.10"
   }
 }
